--- a/index.html
+++ b/index.html
@@ -71,8 +71,19 @@
 
         <div class="about-right">
           <div class="about-right-inner">
+            <div class="ufo">
+              <img src="/img/icons/ufo-svgrepo-com.svg" alt="">
+              <div class="mainlines"></div>
+              <div class="mainlines"></div>
+              <div class="lines"></div>
+              <div class="lines"></div>
+              <div class="lines"></div>
+            </div>
+
+            <div class="photo">
             <img src="/img/BG-Resumepic.png" alt="">
             <img src="/img/FG-Resumepic.png" alt="">
+            </div>
           </div>
         </div>
       </div>
