--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
   <!-- particlesjs -->
   <!-- <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> stats.js lib <script src="http://threejs.org/examples/js/libs/stats.min.js"></script> -->
   <link rel="stylesheet" href="particles.css">
-  <script src="particles.js"></script>
+  <script  src="/particles.js"></script>
   <!-- gsap -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- scrolltrigger -->
