--- a/index.html
+++ b/index.html
@@ -86,12 +86,17 @@
         </div>
       </div>
     </div>
+    <div class="alienmessage">
+      <img src="/img/icons/alien-message.svg" alt="">
+    </div>
   </header>
+
   <div class="containeradditional">
     <div class="alienicon">
       <img src="/img/icons/alien-svgrepo-com.svg" alt="">
     </div>
   </div>
+
   <div class="aboutme">
     <div class="wrapper">
       <div class="about-inner">
@@ -237,6 +242,9 @@
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
+                <div class="swiper-slide">
+                  <a href="https://moxa-alexu.netlify.app" target="_blank"><img src="/img/MOXAscreenshot.png" alt=""></a>
+                </div>
                 <div class="swiper-slide">
                   <a href="https://moxa-alexu.netlify.app" target="_blank"><img src="/img/MOXAscreenshot.png" alt=""></a>
                 </div>
