--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
               <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <a href="https://moxa-alexu.netlify.app" target="_blank"><img src="/img/MOXAscreenshot.png" alt=""></a>
+                  <a href="https://insurnce-alexu.netlify.app" target="_blank"><img src="/img/insurnce.png" alt=""></a>
                 </div>
                 <div class="swiper-slide">
                   <a href="https://moxa-alexu.netlify.app" target="_blank"><img src="/img/MOXAscreenshot.png" alt=""></a>
