added github to footer

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
               <div class="swiper-scrollbar"></div>
             </div>
         </div>
-
+       
       </div>
     </div>
   </div>
@@ -299,6 +299,9 @@
         <div class="email">
           <img src="/img/icons/cosmonaut-svgrepo-com.svg" alt="">
           <a href="mailto:client.alexu@gmail.com">Email: client.alexu@gmail.com</a>
+        </div>
+        <div class="github">
+          <a href="http://github.com/alexorno" target="_blank" rel="noopener noreferrer">My GitHub</a>
         </div>
         <div class="upwork">
           <img src="/img/icons/upwork-svgrepo-com.svg" alt="">
