--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
             Contact Me
           </h1>
         </div>
-          <div class="form">
-            <input type="text" placeholder="Subject">
-            <input placeholder="E-mail" type="email" name="email" id="mail">
-            <textarea placeholder="Message" name="message" id="message"></textarea>
+          <div class="form" netlify action="/success.html">
+            <input type="text" name="Subjet" placeholder="Subject">
+            <input placeholder="E-mail" type="email" name="Email" id="mail">
+            <textarea placeholder="Message" name="Message" id="message"></textarea>
             <button type="submit" class="submitbutton">SEND</button>
           </div>
       </div>
