fix nav and welcomeh1

--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
           </div>
           <div class="burger-menu">
             <ul>
-              <li>
-                <a href="index.html">Home</a>
+              <li id="homeBtn">
+                Home
               </li>
-
-              <li>
-                <a href="/facilities.html">Facilities</a>
+              <li id="aboutBtn">
+                About Me
               </li>
-
-              <li>
-                <a href="/rooms.html">Rooms</a>
+              <li id="skillsBtn">
+                Skills
               </li>
-
-              <li>
-                <a href="/contactus.html">Contact us</a>
+              <li id="worksBtn">
+                Works
+              </li>
+              <li id="contactBtn">
+                Contact Me
               </li>
             </ul>
           </div>
