div=>form, changed skills list

--- a/index.html
+++ b/index.html
@@ -149,112 +149,46 @@
           <ul>
             <li>
               <p>HTML5</p>
-              <div class="stars">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-              </div>
             </li>
 
             <li>
               <p>CSS3</p>
-              <div class="stars">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-              </div>
             </li>
 
             <li>
               <p>JavaScript (ES6)</p>
-              <div class="stars">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-              </div>
             </li>
-
-            <li>
-              <p>RWD</p>
-              <div class="stars">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-              </div>
-            </li>
-
+            
             <li>
               <p>React</p>
-              <div class="stars">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-              </div>
             </li>
 
             <li>
               <p>Next.js</p>
-              <div class="stars">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-              </div>
+            </li>
+
+            <li>
+              <p>MySQL</p>
+            </li>
+
+            <li>
+              <p>RWD</p>
             </li>
 
             <li>
               <p>Commerce.js</p>
-              <div class="stars">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-              </div>
             </li>
 
             <li>
               <p>GIT</p>
-              <div class="stars">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-              </div>
             </li>
 
             <li>
               <p>Sanity</p>
-              <div class="stars">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-              </div>
             </li>
 
             <li>
               <p>Netlify</p>
-              <div class="stars">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-                <img src="/img/icons/star-svgrepo-com.svg" alt="">
-              </div>
             </li>
 
           </ul>
@@ -292,12 +226,12 @@
             Contact Me
           </h1>
         </div>
-          <div class="form" netlify action="/success.html">
+          <form class="form" netlify action="/success.html">
             <input type="text" name="Subjet" placeholder="Subject">
             <input placeholder="E-mail" type="email" name="Email" id="mail">
             <textarea placeholder="Message" name="Message" id="message"></textarea>
             <button type="submit" class="submitbutton">SEND</button>
-          </div>
+          </form>
       </div>
     </div>
   </div>
