--- a/index.html
+++ b/index.html
@@ -268,6 +268,6 @@
   <!-- scrolltrigger -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js" integrity="sha512-v8B8T8l8JiiJRGomPd2k+bPS98RWBLGChFMJbK1hmHiDHYq0EjdQl20LyWeIs+MGRLTWBycJGEGAjKkEtd7w5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <script src="/main.js"></script>
+  <script src="/main.js" type="module"></script>
 </body>
 </html>
