fox zindex for message, changed desc and name

--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
       <div class="about-inner">
         <div class="about-left">
           <h1>
-            My name is Alex and i’m a front-end developer focusing on every pixel
+            My name is Alex and i’m a front-end developer
           </h1>
           <p>
-            If you need to develop your site from design (Figma, XD, etc.) you're in the right place. The main reason why i choose that area of work is that i always loved to create and learn something new,
-            besides that i was making leather goods and was editing photos/videos as hobby.
+            If you need to develop your site from design (Figma, XD, etc.) you're in the right place. 
+            I will help you to implement wide variety of websites from scratch with use of advanced technologies, such as Next.js, MySQL database, React and etc...<br/>
+            You can send a message to me with use of <span style="text-decoration: underline;cursor: pointer;" class="contactBtn">form</span> or to my <a style="color:inherit;cursor: pointer;" href="mailto: audut1197@gmail.com">email</a>
           </p>
         </div>
 
